Добавил стили таблицы пользователей

--- a/admin/src/css/style.scss
+++ b/admin/src/css/style.scss
@@ -1,6 +1,7 @@
 @import "./components/buttons.scss";
 @import "./components/message.scss";
 @import "./components/input.scss";
+@import "./components/table.scss";
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
