Привёл в порядок лдогику добавления удаления пользователей

--- a/admin/src/css/components/message.scss
+++ b/admin/src/css/components/message.scss
@@ -1,7 +1,11 @@
 .message {
+  font-size: 0.9em;
+  margin-bottom: 1em;
+
   &-error {
     color: red;
-    font-size: 0.9em;
-    margin-bottom: 1em;
+  }
+  &-success {
+    color: #007bff;
   }
 }
