--- a/admin/src/css/style.scss
+++ b/admin/src/css/style.scss
@@ -2,6 +2,7 @@
 @import "./components/message.scss";
 @import "./components/input.scss";
 @import "./components/table.scss";
+@import "./components/modal.scss";
 
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
