--- a/admin/src/css/components/buttons.scss
+++ b/admin/src/css/components/buttons.scss
@@ -1,7 +1,7 @@
 .button {
   display: inline-block;
   padding: 10px 20px;
-  font-size: 16px;
+  font-size: 1rem;
   font-family: Arial, sans-serif;
   text-align: center;
   color: #fff;
@@ -18,6 +18,11 @@
   &:disabled {
     background-color: #cccccc;
     cursor: not-allowed;
+  }
+
+  &--small {
+    padding: 5px 10px;
+    font-size: 0.9em;
   }
 }
 
