--- a/admin/src/css/components/buttons.scss
+++ b/admin/src/css/components/buttons.scss
@@ -1,6 +1,7 @@
 .button {
   display: inline-block;
   padding: 10px 20px;
+  margin-right: 10px;
   font-size: 1rem;
   font-family: Arial, sans-serif;
   text-align: center;
@@ -10,6 +11,10 @@
   border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.3s ease;
+
+  &:last-child {
+    margin-right: 0;
+  }
 
   &:hover {
     background-color: #0056b3;
