--- a/app/src/style/style.scss
+++ b/app/src/style/style.scss
@@ -1,25 +1,29 @@
+@use "./component/button";
+@use "./component/form";
+@use "./component/input";
+@use "./component/header";
+@use "fonts";
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  --color-primary: #6B38E3;
+  --color-error: #b00020;
+  --color-disable: #CFBEF6;
+
+  --font-title: 'Unbounded';
+  --font-primary: 'Unbounded';
+  --font-secondary: 'NunitoSans';
 }
 
 body {
@@ -27,53 +31,42 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
-}
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-.card {
-  padding: 2em;
 }
 
 #app {
-  max-width: 1280px;
+  box-sizing: border-box;
+  max-width: 420px;
+  width: 100%;
+  height: 100vh;
+  color: #1E1E1E;
+  background-color: #ffffff;
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  padding: 2rem 1rem;
+}
+
+p {
+  font-size: 1.2rem;
+  font-family: var(--font-secondary), sans-serif;
+  font-weight: 400;
+  margin: 0 0 1rem 0;
+}
+h1, h2, h3, h4, h5 {
+  color: var(--color-primary);
+  font-family: var(--font-title), sans-serif;
+  font-weight: 600;
+  margin: 0 0 1rem;
+}
+
+h3 {
+  font-size: 1.75rem;
+}
+
+hr {
+  border-width: 2px;
+  border-color: var(--color-disable);
+  border-style: solid;
 }
 
 @media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+
 }
