--- a/admin/src/css/components/input.scss
+++ b/admin/src/css/components/input.scss
@@ -3,35 +3,76 @@
   flex-direction: column;
   text-align: left;
 
-  & > input {
+  & > input,
+  & > select,
+  & > textarea {
     padding: 0.5em;
     margin-bottom: 1em;
     border: 1px solid #ccc;
     border-radius: 4px;
-  }
-
-  & > select {
-    padding: 0.5em;
-    margin-bottom: 1em;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    background-color: #fff;
     font-size: 1em;
     outline: none;
     transition: border-color 0.3s ease, box-shadow 0.3s ease;
 
     &:focus {
       border-color: black;
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     }
+  }
 
-    &:not(:placeholder-shown) {
-      color: #333;
-    }
+  & > textarea {
+    resize: vertical;
+    min-height: 80px;
+  }
 
-    &:focus + label,
-    &:not(:placeholder-shown) + label {
-      color: black;
-      transform: translateY(-1.5em);
+  & > label {
+    font-size: 0.9em;
+    color: #666;
+    margin-bottom: 0.2em;
+    transition: color 0.3s ease, transform 0.3s ease;
+  }
+
+  & > input:focus + label,
+  & > select:focus + label,
+  & > textarea:focus + label,
+  & > input:not(:placeholder-shown) + label,
+  & > select:not(:placeholder-shown) + label,
+  & > textarea:not(:placeholder-shown) + label {
+    color: black;
+    transform: translateY(-1.5em);
+  }
+
+  & > .radio-group {
+    display: flex;
+    flex-direction: row;
+    gap: 1em;
+    margin-bottom: 1em;
+
+    & > label {
+      display: flex;
+      align-items: center;
+      font-size: 0.9em;
+      cursor: pointer;
+
+      input[type="radio"] {
+        appearance: none;
+        width: 16px;
+        height: 16px;
+        margin-right: 0.5em;
+        border: 2px solid #ccc;
+        border-radius: 50%;
+        outline: none;
+        transition: background-color 0.3s ease, border-color 0.3s ease;
+
+        &:checked {
+          border-color: black;
+          background-color: black;
+        }
+
+        &:focus {
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+        }
+      }
     }
   }
 }
