--- a/app/src/style/component/input.scss
+++ b/app/src/style/component/input.scss
@@ -22,7 +22,7 @@
     }
 
     &::placeholder {
-      color: var(--color-disable);
+      color: var(--color-subtitle);
       font-family: var(--font-secondary), sans-serif;
       font-weight: 700;
     }
