--- a/app/src/style/component/button.scss
+++ b/app/src/style/component/button.scss
@@ -1,10 +1,10 @@
 .button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 15px 20px;
   font-size: 1.125rem;
   font-family: var(--font-secondary), sans-serif;
-  font-weight: 600;
+  font-weight: 800;
   background-color: var(--color-primary);
   cursor: pointer;
   transition: border-color 0.25s;
